statum-macros/tests/ui/invalid_validators_unknown_state_method.stderr
error: Error: `#[validators(TaskMachine)]` on `impl DbRow` defines methods that do not match any variant in `TaskState`.
       Found: unknown validator methods: `is_archived`
       Expected: one `is_{state}` method per `TaskMachine` state: `is_draft, is_done`
       Fix: rename or remove methods that do not correspond to a `#[state]` variant.
  --> tests/ui/invalid_validators_unknown_state_method.rs:29:1
   |
29 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_unknown_state_method.rs:48:2
   |
48 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_unknown_state_method.rs`
